--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
-    background-color: #1D4221;
-    color: white;
-    font-family: "Bai Jamjuree", sans-serif;
+    background-color: #6600FF;
+    color: #3D1F77;
+    font-family: "Fira Sans", sans-serif;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -10,9 +10,9 @@ body {
 }
 
 button {
-    background-color: #64A712;
-    color: white;
-    font-family: "Bai Jamjuree", sans-serif;
+    background-color: #6C2C91;
+    color: #3D1F77;
+ font-family: "Fira Sans", system-ui;
 }
 
 .passo {
