--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
-    background-color: #6600FF;
-    color: #3D1F77;
+    background-color: #00CCFF;
+    color: #005F80;
     font-family: "Fira Sans", sans-serif;
     display: flex;
     justify-content: center;
@@ -10,7 +10,7 @@ body {
 }
 
 button {
-    background-color: #6C2C91;
+    background-color: #00B2FF;
     color: #3D1F77;
  font-family: "Fira Sans", system-ui;
 }
