--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
     background-color: #00CCFF;
     color: #005F80;
-    font-family: "Fira Sans", sans-serif;
+    font-family: "Work Sans", system-ui;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -12,7 +12,7 @@ body {
 button {
     background-color: #00B2FF;
     color: #3D1F77;
- font-family: "Fira Sans", system-ui;
+ font-family: "Work Sans", system-ui;
 }
 
 .passo {
